Ajuste do Response JSON para Classe Cripto e mudança e otimização de código do tableview do HomeGragment.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -165,6 +165,7 @@
                     android:src="@drawable/barra_cripto_popu" />
 
                 <TableLayout
+                    android:id="@+id/table_criptoPopulares"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|start"
@@ -205,218 +206,6 @@
                             android:paddingLeft="20dp"
                             android:text="Cap do mercado" />
                     </TableRow>
-
-
-                    <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:paddingTop="8dp">
-
-                        <TextView
-                            android:id="@+id/coinName1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/price1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/variant1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="- %"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/MKTCAP1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:paddingTop="8dp">
-
-                        <TextView
-                            android:id="@+id/coinName2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/price2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/variant2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="- %"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/MKTCAP2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:paddingTop="8dp">
-
-                        <TextView
-                            android:id="@+id/coinName3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/price3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/variant3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="- %"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/MKTCAP3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:paddingTop="8dp">
-
-                        <TextView
-                            android:id="@+id/coinName4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/price4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/variant4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="- %"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/MKTCAP4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:paddingTop="8dp">
-
-                        <TextView
-                            android:id="@+id/coinName5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/price5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/variant5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="- %"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-
-                        <TextView
-                            android:id="@+id/MKTCAP5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingHorizontal="20dp"
-                            android:text="-"
-                            android:textColor="#000000"
-                            android:textSize="13sp" />
-                    </TableRow>
-
                 </TableLayout>
 
             </LinearLayout>
