--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,6 +31,11 @@
         android:name="com.ifpe.criptoscan.ui.user.UserFragment"
         android:label="Perfil"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/navigation_coin_details"
+        android:name="com.ifpe.criptoscan.ui.home.CoinDetailsFragment"
+        android:label="Detalhes"
+        tools:layout="@layout/fragment_coin_details"/>
 
 
 </navigation>
