--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,12 +103,12 @@
                     android:src="@drawable/barra_laranja" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <ImageButton
+                    <!--<ImageButton
                         android:id="@+id/imageButton"
                         style="@style/Widget.AppCompat.ImageButton"
                         android:layout_width="wrap_content"
@@ -128,7 +128,11 @@
                         android:contentDescription="@string/app_name"
                         android:paddingLeft="8dp"
                         android:paddingTop="15dp"
-                        android:src="@drawable/icone_ethereum" />
+                        android:src="@drawable/icone_ethereum" />-->
+                    <ListView
+                        android:id="@+id/listView_favoritos"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
             </LinearLayout>
