--- a/app/src/main/res/layout/activity_coin_details.xml
+++ b/app/src/main/res/layout/activity_coin_details.xml
@@ -47,7 +47,7 @@
             android:enabled="false"
             android:layout_width="150dp"
             android:layout_gravity="right"
-
+            android:onClick="addAlerta"
             android:text="Criar alerta"/>
     </GridLayout>
 
