Criptomedas em tendencia visual ajustado

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -250,13 +250,14 @@
                     android:paddingTop="20dp">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_weight="1">
+
                         <ListView
                             android:id="@+id/listView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"/>
+                            android:layout_width="395dp"
+                            android:layout_height="match_parent" />
                     </LinearLayout>
 
                 </LinearLayout>
