--- a/app/src/main/res/layout/listcripto.xml
+++ b/app/src/main/res/layout/listcripto.xml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/cripto_image"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:layout_weight="1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+
+        android:cropToPadding="true"
+        android:scaleType="fitStart" />
+
     <TextView
         android:id="@+id/cripto_name"
-        android:textSize="14pt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="20dp"/>
+        android:layout_weight="1"
+        android:textSize="12pt"
+        android:gravity="left|start"
+
+        android:verticalScrollbarPosition="left"
+        tools:ignore="RtlSymmetry" />
+
     <TextView
         android:id="@+id/cripto_price"
-        android:textSize="10pt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textAlignment="center"
+        android:textSize="10pt" />
+
     <TextView
         android:id="@+id/cripto_info"
-        android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="right|start"
+        android:layout_weight="1" />
 </LinearLayout>
