--- a/app/src/main/res/layout/listalertas.xml
+++ b/app/src/main/res/layout/listalertas.xml
@@ -8,27 +8,36 @@
         android:layout_weight="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/alertas_image"
-            android:layout_weight="1"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/alertas_name"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textStyle="italic" />
     </LinearLayout>
+
     <ImageView
         android:id="@+id/alerta_icone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
+
     <TextView
         android:id="@+id/alertas_preço"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:textSize="20dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="right|center_vertical"
+        android:layout_weight="1"
+        android:foregroundGravity="center_vertical"
+        android:gravity="center_vertical"
+        android:textSize="20dp" />
 </LinearLayout>
