--- a/app/src/main/res/layout/listfavoritos.xml
+++ b/app/src/main/res/layout/listfavoritos.xml
@@ -7,15 +7,20 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/favoritos_image"
-            android:layout_weight="1"
             android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:cropToPadding="true" />
+
         <TextView
             android:id="@+id/favoritos_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="30sp" />
     </LinearLayout>
 
 </LinearLayout>
